--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,15 @@
+.flex{
+  display: flex;
+  align-items: center;
+  
+}
+.width{
+  width: 225px;
+
+}
+.padding{
+  padding:10px ;
+}
 .profile-pic {
   position: relative;
   max-width: 130px;
