--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -580,7 +580,7 @@ small {
 /* .teal */
 
 .teal {
-  background-color: #008073 !important;
+  background-color: #022f6a !important;
 }
 
 /* .teal {
