--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,7 @@
   position: relative;
   padding: 11px 35px;
   background: #fff;
-  color: #00796b;
+  color: #005179;
   border: 2px solid #fff;
   font-weight: 600;
   font-size: 15px;
@@ -341,7 +341,7 @@ h3 {
 } */
 
 #intro.section {
-  background: #a7ffeb repeat;
+  background: #013752 repeat;
   position: relative;
 }
 
